antsurance/force-app/main/default/objects/Case/fields/Claude_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Claude_Analysis__c</fullName>
    <description>Claude's analysis of the claim's evidence: the adjuster's report, what each document and video showed, and what the report depended on. JSON, written by the claim analysis component; run it again there rather than editing here.</description>
    <label>Claude Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>