antsurance/force-app/main/default/objects/Case/fields/Claude_Analysis_At__c.field-meta.xml
<CustomField>
    <fullName>Claude_Analysis_At__c</fullName>
    <description>When the claim analysis report was last written.</description>
    <label>Claude Analysis Written</label>
    <type>DateTime</type>
</CustomField>