antsurance/force-app/main/default/objects/Case/fields/Claude_Brief__c.field-meta.xml
<CustomField>
    <fullName>Claude_Brief__c</fullName>
    <description>Claude's written read of the claim: where it stands, coverage, the money, anything to watch and what to do next. Markdown. Written by the claim brief component; regenerate it there rather than editing here.</description>
    <label>Claude Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>