antsurance/force-app/main/default/objects/Case/fields/Claude_Brief_At__c.field-meta.xml
<CustomField>
    <fullName>Claude_Brief_At__c</fullName>
    <description>When the Claude brief was last written, so the page can tell when the claim has changed since.</description>
    <label>Claude Brief Written</label>
    <type>DateTime</type>
</CustomField>