antsurance/force-app/main/default/objects/Case/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <description>The day the claim or request was closed. Set when the status moves to a closed one and cleared if it is reopened, so days open stops counting at the close.</description>
    <label>Closed On</label>
    <type>Date</type>
</CustomField>