antsurance/force-app/main/default/objects/Case/fields/Coverage_Check__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Check__c</fullName>
    <description>Whether the policy covered the date of loss. Set automatically from the policy term and status when a claim is saved.</description>
    <label>Policy in Force</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In force on date of loss</fullName>
            </value>
            <value>
                <fullName>Outside policy term</fullName>
            </value>
            <value>
                <fullName>Policy not in force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>