antsurance/force-app/main/default/objects/Case/fields/Coverage_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Confirmed_At__c</fullName>
    <description>When the adjuster confirmed the coverage check.</description>
    <label>Coverage Confirmed On</label>
    <type>DateTime</type>
</CustomField>