antsurance/force-app/main/default/objects/Case/fields/Coverage_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Confirmed_By__c</fullName>
    <description>The adjuster who read the coverage check and confirmed it. Cleared when coverage is checked again.</description>
    <label>Coverage Confirmed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>