antsurance/force-app/main/default/objects/Case/fields/Coverage_Read__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Read__c</fullName>
    <description>Claude's read of whether the policy responds to this loss, with the records each finding rests on. JSON, written by the coverage check component; check again there rather than editing here.</description>
    <label>Coverage Read</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>