antsurance/force-app/main/default/objects/Case/fields/Coverage_Read_At__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Read_At__c</fullName>
    <description>When the coverage read was last written, so the page can tell when the claim or policy has changed since.</description>
    <label>Coverage Read Written</label>
    <type>DateTime</type>
</CustomField>