antsurance/force-app/main/default/objects/Case/fields/Coverage_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Verdict__c</fullName>
    <description>The coverage read's verdict: Covered, Not covered or Needs review. Advice from Claude until an adjuster confirms it.</description>
    <label>Coverage Verdict</label>
    <length>20</length>
    <type>Text</type>
</CustomField>