antsurance/force-app/main/default/objects/Case/fields/Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loss__c</fullName>
    <description>When the loss happened. Claims only.</description>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>