antsurance/force-app/main/default/objects/Case/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Days from when the claim or request was reported until it closed, or until today while it is open.</description>
    <label>Days Open</label>
    <formula><![CDATA[IF(ISBLANK(Reported_Date__c), NULL, BLANKVALUE(Closed_On__c, IF(IsClosed, DATEVALUE(ClosedDate), TODAY())) - Reported_Date__c)]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>