antsurance/force-app/main/default/objects/Case/fields/Estimated_Loss__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Loss__c</fullName>
    <description>First estimate of the total loss, taken at intake.</description>
    <label>Estimated Loss</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>