antsurance/force-app/main/default/objects/Case/fields/Handled_By__c.field-meta.xml
<CustomField>
    <fullName>Handled_By__c</fullName>
    <description>The adjuster working the claim, or the service representative working the request.</description>
    <label>Handled By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>