antsurance/force-app/main/default/objects/Case/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>Whether this is a claim or a service request, in words, for lists that show both.</description>
    <label>Kind</label>
    <formula><![CDATA[IF(RecordType.DeveloperName = "Claim", "Claim", "Service request")]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>