antsurance/force-app/main/default/objects/Case/fields/Loss_Location__c.field-meta.xml
<CustomField>
    <fullName>Loss_Location__c</fullName>
    <description>Where the loss happened.</description>
    <label>Loss Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>