antsurance/force-app/main/default/objects/Case/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <description>The cause of loss. Claims only.</description>
    <label>Loss Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Animal Strike</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Water Damage</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Wind or Hail</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Bodily Injury</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>