antsurance/force-app/main/default/objects/Case/fields/Outstanding_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Reserve__c</fullName>
    <description>Reserve minus what has been paid.</description>
    <label>Outstanding Reserve</label>
    <formula><![CDATA[BLANKVALUE(Reserve_Amount__c, 0) - BLANKVALUE(Paid_Amount__c, 0)]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>