antsurance/force-app/main/default/objects/Case/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>Total paid on this claim so far.</description>
    <label>Paid to Date</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>