antsurance/force-app/main/default/objects/Case/fields/Photo_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Photo_Assessment__c</fullName>
    <description>Claude's assessment of the claim's photographs: the damage in each, whether it fits the reported loss, and what to do next. JSON, written by the claim photos component; assess again there rather than editing here.</description>
    <label>Photo Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>