antsurance/force-app/main/default/objects/Case/fields/Photo_Assessment_At__c.field-meta.xml
<CustomField>
    <fullName>Photo_Assessment_At__c</fullName>
    <description>When the photo assessment was last made, so the page can tell when photographs have been added since.</description>
    <label>Photos Assessed</label>
    <type>DateTime</type>
</CustomField>