antsurance/force-app/main/default/objects/Case/fields/Photo_Marks__c.field-meta.xml
<CustomField>
    <fullName>Photo_Marks__c</fullName>
    <description>Areas a person marked on the claim's photographs, with Claude's answer about each, and a person's changes to the boxes Claude drew. JSON, written by the claim photo viewer; change it there rather than editing here.</description>
    <label>Photo Marks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>