antsurance/force-app/main/default/objects/Case/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <description>The policy this claim or service request is about.</description>
    <label>Policy</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Claims and Service Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>