antsurance/force-app/main/default/objects/Case/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>When the claim or request was first reported to Antsurance. Defaults to today.</description>
    <label>Received</label>
    <defaultValue>TODAY()</defaultValue>
    <type>Date</type>
</CustomField>