antsurance/force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>What the policyholder is asking for. Policy service requests only.</description>
    <label>Request Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Driver</fullName>
            </value>
            <value>
                <fullName>Remove Driver</fullName>
            </value>
            <value>
                <fullName>Add Vehicle</fullName>
            </value>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Change Coverage</fullName>
            </value>
            <value>
                <fullName>Billing Question</fullName>
            </value>
            <value>
                <fullName>Certificate of Insurance</fullName>
            </value>
            <value>
                <fullName>Policy Document Request</fullName>
            </value>
            <value>
                <fullName>Cancel Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>