antsurance/force-app/main/default/objects/Case/fields/Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Amount__c</fullName>
    <description>Money set aside to pay this claim.</description>
    <label>Reserve</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>