antsurance/force-app/main/default/objects/Case/fields/SIU_Referral__c.field-meta.xml
<CustomField>
    <fullName>SIU_Referral__c</fullName>
    <description>The claim has been referred to the special investigations unit for possible fraud.</description>
    <label>SIU Referral</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>