antsurance/force-app/main/default/objects/Case/fields/Subrogation_Potential__c.field-meta.xml
<CustomField>
    <fullName>Subrogation_Potential__c</fullName>
    <description>Another party may be liable, so Antsurance may recover what it pays.</description>
    <label>Subrogation Potential</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>