antsurance/force-app/main/default/objects/Case/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <businessProcess>Claims</businessProcess>
    <description>A reported loss under a policy, worked from first notice through payment or denial.</description>
    <label>Claim</label>
</RecordType>