antsurance/force-app/main/default/objects/Case/recordTypes/Policy_Service.recordType-meta.xml
<RecordType>
    <fullName>Policy_Service</fullName>
    <active>true</active>
    <businessProcess>PolicyService</businessProcess>
    <description>A policyholder request to change or ask about a policy, such as adding a driver or getting a certificate of insurance.</description>
    <label>Policy Service</label>
</RecordType>