antsurance/force-app/main/default/objects/Case/listViews/High_Severity_Claims.listView-meta.xml
<ListView>
    <fullName>High_Severity_Claims</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Severity__c</columns>
    <columns>Reserve_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Claim</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>High,Catastrophic</value>
    </filters>
    <label>High Severity Claims</label>
</ListView>