antsurance/force-app/main/default/objects/Case/listViews/Open_Service_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Service_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Reported_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Policy_Service</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Service Requests</label>
</ListView>